[package]
name = "edgecord"
version = "0.0.1"
edition = "2021"
authors = ["sizumita <contact@sumidora.com>"]
description = "A discord interaction bot framework for cloudflare workers"
license = "MIT"
repository = "https://github.com/sizumita/edgelord"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
local = ["reqwest"]


[dependencies]
worker = "0.0.9"
edgelord = { path = "../edgelord" }
edgecord_macros = { path = "../edgecord_macros", version = "0.0.1" }
futures = "0.3.21"
twilight-model = "0.11.0"
async-trait = "0.1.53"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
cfg-if = "1.0.0"
url = "2.2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.10", features = ["json"], optional = true}
