[package]
name = "edgelord"
version = "0.0.1"
edition = "2021"
authors = ["sizumita <contact@sumidora.com>"]
description = "Bot frameworks for cloudflare workers"
license = "MIT"
repository = "https://github.com/sizumita/edgelord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]
discord = ["edgelord_discord"]
none = []

[dependencies]
cfg-if = "1.0.0"

edgelord_discord = { path = "../edgelord_discord", version = "0.0.1", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }
