[package]
name = "edgelord"
version = "0.0.1"
edition = "2021"
authors = ["sizumita <contact@sumidora.com>"]
description = "Bot frameworks for cloudflare workers"
license = "MIT"
repository = "https://github.com/sizumita/edgelord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]
none = []

[dependencies]
cfg-if = "1.0.0"
url = "2.2.2"
worker = "0.0.9"
serde = "1.0.137"
serde_json = "1.0.81"

console_error_panic_hook = { version = "0.1.7", optional = true }
