[package]
name = "edgelord_discord"
version = "0.0.1"
edition = "2021"
authors = ["sizumita <contact@sumidora.com>"]
description = "A discord interaction bot framework for cloudflare workers"
license = "MIT"
repository = "https://github.com/sizumita/edgelord"

[dependencies]
worker = "0.0.9"
edgelord_discord_macros = { path = "../edgelord_discord_macros", version = "0.0.1" }
