[package]
name = "edgelord_discord_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.94", features = ["full", "fold"] }
quote = "1.0.18"
proc-macro2 = "1.0.38"
darling = "0.14.1"
