[package]
name = "ex_basic_discord_interaction_bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = "0.0.9"
edgelord_discord = { path = "../../edgelord_discord", version = "*" }

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
