[package]
name = "ex_basic_discord_interaction_bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.9"
edgelord = { path = "../../edgelord", features = ["discord"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
