[package]
name = "e3_discord_defer_command_bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.9"
serde = {version = "1.0.137", features = ["derive"]}

edgecord = { path = "../../edgecord"}
edgelord = { path = "../../edgelord"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.18.2", features = ["full"]}


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bin]]
name = "upgrade_command"
path = "src/bin/upgrade_command.rs"
